k8s/demo/myapp/2.deployment-myappv1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deploy
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
      release: deployment
  template:
    metadata:
      labels:
        app: myapp
        release: deployment
    spec:
      containers:
        - name: myapp
          image: creator1024/myapp:v1
          ports:
            - name: http
              containerPort: 80
