k8s/demo/myapp/4.svc-NodePort-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-nodeport
  namespace: default
spec:
  selector:
    app: myapp
    release: deployment
  type: NodePort
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
