k8s/demo/myapp/4.svc-clusterIP-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: default
spec:
  selector:
    app: myapp
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
