k8s/demo/myapp/4.svc-headless-myapp.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc-headless
  namespace: default
spec:
  selector:
    app: myapp
    release: deployment
  clusterIP: None
  ports:
  - port: 80
    targetPort: 80
