k8s/demo/myapp/5.ingress-myapp.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myapp.xxx.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: myapp-svc-nodeport
          servicePort: 80
